Fixes features overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,7 +262,7 @@ h3 {
   width: 100%;
   float: left;
   background: linear-gradient(to bottom, #fafafa, #f3f3f3);
-  overflow-y: hidden;
+  overflow: hidden;
 }
 /* line 66, ../sass/_section.scss */
 .section .inside {
