--- a/assets/sass/_section.scss
+++ b/assets/sass/_section.scss
@@ -61,7 +61,7 @@ h3
     width      : 100%;
     float      : left;
     background : linear-gradient(to bottom, #fafafa, #f3f3f3);
-    overflow-y : hidden;
+    overflow : hidden;
 
     .inside
     {
